--- a/docs/site/_config.yml
+++ b/docs/site/_config.yml
@@ -5,13 +5,14 @@ google_analytics: UA-97591265-1
 
 author_name: Marc Ed. Raffalli
 github_username:  marc-ed-raffalli
+github_repo:  https://github.com/marc-ed-raffalli/declarative-e2e-test
 
 copyright: © 2020 - Marc Ed. Raffalli
 
 exclude:
   - Gemfile
   - Gemfile.lock
-  - scripts
+  - logo.drawio
 
 sass:
   style: compressed
